--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>EchoVerse • New Year’s Player</title>
+  <link rel="icon" href="favicon.png">
   <style>
     .av-callout{
       pointer-events:none;
